Fix the second title padding and text alignment

--- a/styles.css
+++ b/styles.css
@@ -88,18 +88,19 @@ ul{
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 .container2 .title{
     color: #1F2937;
     font-size: 36px;
     font-weight: 900;
-    padding: 32px;
-    margin-bottom: 16px;
+    padding-top: 32px ;
 }
 
 .container2 .text{
     font-size: 24px;
     font-weight: lighter;
+    text-align: center;
 }
 
 .subcontainer2{
